--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   responsive_framework: ^0.2.0
   carousel_slider: ^5.1.1
   cached_network_image: ^3.3.1
+  video_player: ^2.8.1
 
 dev_dependencies:
   flutter_test:
@@ -35,9 +36,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/media.json
 
 
   fonts:
